--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.3.13"
+    "mongoose": "^5.3.13",
+    "mongoose-paginate": "^5.0.3"
   },
   "devDependencies": {
     "eslint": "^5.9.0",
