--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.13",
-    "mongoose-paginate": "^5.0.3"
+    "mongoose-paginate": "^5.0.3",
+    "nodemailer": "^4.7.0"
   },
   "devDependencies": {
     "eslint": "^5.9.0",
