--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
+    "express-async-handler": "^1.1.4",
     "express-handlebars": "^3.0.0",
     "express-validation": "^1.0.2",
     "joi": "^14.3.0",
@@ -13,7 +14,8 @@
     "mongoose": "^5.3.13",
     "mongoose-paginate": "^5.0.3",
     "nodemailer": "^4.7.0",
-    "nodemailer-express-handlebars": "^3.0.0"
+    "nodemailer-express-handlebars": "^3.0.0",
+    "youch": "^2.0.10"
   },
   "devDependencies": {
     "eslint": "^5.9.0",
